--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "index.js"
   ],
   "dependencies": {
-    "canvas": "2.0.0-alpha.5"
+    "canvas2svg": "^1.0.16",
+    "jsdom": "^11.12.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
